# cc

./: .gitignore  AGENTS.md  BENCHMARKS.md  BINDING_PLAN.md  FS_PLAN.md  FULLTEST.md  FULLTEST_FAILURES.csv  FULLTEST_FAILURES.md  GPU_PLAN.md  HACKING.md  ISSUES.md  MULTIPLAN.md  MULTIVM_PLAN.md  NETWORK_PLAN.md  PLAN.md  README.md  RUNTIME_PLAN.md  TEST_FAILURES.md  TODO.md  VIOFS_PLAN.md  VISION.md  VM_SPLIT_PLAN.html  go.mod  go.sum  plan.md  run_xfstest.sh  virt.go  virt_example.go  virt_test.go
.github/workflows/: basic-unit-tests-linux-arm64.yml  basic-unit-tests-macos-arm64.yml  basic-unit-tests-windows-amd64.yml  build-wheels.yml  deploy-docs.yml  deploy.yml  go.yml  kvm-tests.yml  pyneurodesk-fulltests.yml  release-bindings.yml  release.yml  test.yml  unit-tests.yml  virtualization-runner-probe.yml  virtualization-tests.yml
agents/plan/: RISCV_PLAN.md
agents/xfstests/: TASKS.md
benchmarks/62864bb6/: benchmark_20251122_074001.njson  benchmark_20251122_074831.njson  benchmark_20251123_074606.njson
bindings/c/: .gitignore  error.go  handles.go  instance_proxy.go  libcc.go  libcc.h  libcc_test.go
bindings/nodejs/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsdown.config.ts
bindings/python/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
bindings/python/cc/: _ffi.py  client.py  types.py
bindings/python/crumblecracker/: __init__.py  _ffi.py  _ipc_backend.py  _ipc_client.py  _ipc_protocol.py  client.py  cmd.py  errors.py  instance.py
bindings/python/tests/: run_all.py  test_api.py  test_basic.py  test_client.py  test_hypervisor.py  test_vm.py
bindings/rust/: .gitignore  Cargo.toml  README.md  build.rs
bindings/rust/.cargo/: config.toml
bindings/rust/examples/: basic.rs
bindings/rust/src/: client.rs  cmd.rs  error.rs  file.rs  instance.rs  lib.rs  net.rs  snapshot.rs  types.rs
bindings/rust/src/ffi/: error.rs  handles.rs  mod.rs  raw.rs
bindings/rust/tests/: integration.rs  test_api.rs  test_client.rs
ccvmd/: ccvmd.go
client/: client.go  client_test.go  context_test.go  custom_dialer_test.go  exec_stream_test.go  input_sender_test.go  progress_stream_test.go  protocol.go  protocol_test.go  websocket_dial_test.go
cmd/agents/: agents.go  main.go  term_other.go
cmd/alpine/: main.go
cmd/bringup/: main.go  main_test.go
cmd/bsdoci/: main.go  main_test.go
cmd/build-vsh-single/: main.go
cmd/cc/: host_control_unix.go  host_control_windows.go  main.go  main_test.go  main_unix_test.go  snapshot_darwin_arm64.go  snapshot_other.go  tty_unix_darwin.go  tty_unix_linux.go  tty_windows.go  vt_windows.go
cmd/cc-helper/: main.go
cmd/ccapp/: design.go  main.go  recent_vms.go  redirect_unix.go  redirect_windows.go  settings.go  site_config.go  ui_app_settings.go  ui_custom_vm.go  ui_delete_confirm.go  ui_onboarding.go  ui_screens.go  ui_settings.go  ui_update_confirm.go  ui_url_confirm.go  url_handler.go  url_handler_test.go  url_register_linux.go  url_register_stub.go  url_register_windows.go
cmd/ccinstaller/: installer_darwin.go  installer_linux.go  installer_windows.go  main.go  wait_unix.go  wait_windows.go
cmd/ccvm/: main.go  main_test.go
cmd/cvmfs/: main.go  main_test.go
cmd/debug/: main.go
cmd/fulltest/: main.go
cmd/glass/: main.go  main_test.go
cmd/helper-bench/: main.go
cmd/helper-fstest/: main.go
cmd/oci/: main.go
cmd/quest/: main.go
cmd/snapshot-e2e/: main.go
cmd/timeslice/: main.go
cmd/tinyboot/: main_darwin_arm64.go  main_other.go  main_windows_amd64.go
cmd/vsh/: README.md  bundled_ccvm.go  bundled_ccvm_empty.go  editor.go  main.go  main_test.go  tty_unix_darwin.go  tty_unix_linux.go  tty_windows.go
docs/: astro.config.mjs  index.html  openapi.json
docs/architecture/: 01-overview.md  02-hypervisor.md  03-virtio-devices.md  04-network-stack.md  05-filesystem-oci.md  06-boot-init.md  07-chipset-ir.md  08-build-system.md  README.md
docs/design/: portable-live-migration.md
examples/: app.star
examples/shared/: config.go  metrics.go  sandbox.go  server.go
fixtures/: alpine-arm64.simg
fixtures/glass-desktop/: Dockerfile  (+10 more)
pyneurodesk/: .gitignore  PLAN.md  README.md  pyproject.toml  start-jupyterlab.sh
pyneurodesk/build_backend/: neurodesk_build_backend.py
pyneurodesk/examples/: main.py  test_niimath_shell.sh
pyneurodesk/fixtures/niimath/: fulltest.yaml
pyneurodesk/notebooks/: hello.txt  helloNd.ipynb  helloNd_benchmark.py
pyneurodesk/src/neurodesk/: __init__.py
pyneurodesk/src/pyneurodesk/: __init__.py  api.py  client.py  fulltest.py  models.py  shell.py
pyneurodesk/tests/: test_client.py  test_fulltest.py  test_shell.py  test_shell_integration.py
tools/: Buildfile  build.go  build.sh  build_vsh_single.sh  fs_benchmark.py  plot_fulltest_durations.py  publish_neurodesk.sh  retag_wheel.py  run_vsh.sh  virtiofs_exit_sweep.py
(+1302 files in other folders)
