[project]
name = "neurodesk"
version = "0.2.0"
description = "Python client for the ccx3 Neurodesk-oriented image and VM API"
readme = "README.md"
authors = [
    { name = "Joshua Scarsbrook", email = "jscarsbrook@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
]

[project.optional-dependencies]
fulltest = [
    "nibabel>=5.3.2",
    "pyyaml>=6.0.2",
]

[project.scripts]
pyneurodesk = "pyneurodesk:main"
neurodesk = "pyneurodesk:main"
nd = "pyneurodesk:main"
pyneurodesk-fulltest = "pyneurodesk.fulltest:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "neurodesk_build_backend"
backend-path = ["build_backend"]

[tool.uv.build-backend]
module-name = ["pyneurodesk", "neurodesk"]
source-include = ["build_backend/**"]

[dependency-groups]
dev = [
    "nibabel>=5.3.2",
    "pytest>=8.4,<9",
    "pyyaml>=6.0.2",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
